--- a/package.json
+++ b/package.json
@@ -1,35 +1,46 @@
 {
-  "name": "web3",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.330.0",
-    "next": "14.1.0",
-    "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+   "name": "web3",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint",
+      "format": "prettier . --ignore-unknown --write"
+   },
+   "dependencies": {
+      "@radix-ui/react-dropdown-menu": "^2.0.6",
+      "@radix-ui/react-icons": "^1.3.0",
+      "@radix-ui/react-slot": "^1.0.2",
+      "class-variance-authority": "^0.7.0",
+      "clsx": "^2.1.0",
+      "next": "14.1.0",
+      "next-themes": "^0.2.1",
+      "react": "^18",
+      "react-dom": "^18",
+      "tailwind-merge": "^2.2.1",
+      "tailwindcss-animate": "^1.0.7"
+   },
+   "devDependencies": {
+      "@iconify-icon/react": "^2.0.1",
+      "@next/bundle-analyzer": "^14.1.0",
+      "@types/node": "^20",
+      "@types/react": "^18",
+      "@types/react-dom": "^18",
+      "@typescript-eslint/eslint-plugin": "^7.0.2",
+      "@typescript-eslint/parser": "^7.0.2",
+      "autoprefixer": "^10.0.1",
+      "eslint": "^8",
+      "eslint-config-next": "14.1.0",
+      "eslint-config-prettier": "^9.1.0",
+      "eslint-import-resolver-typescript": "^3.6.1",
+      "eslint-plugin-import": "^2.29.1",
+      "eslint-plugin-prettier": "^5.1.3",
+      "postcss": "^8",
+      "prettier": "^3.2.5",
+      "prettier-plugin-tailwindcss": "^0.5.11",
+      "tailwindcss": "^3.3.0",
+      "typescript": "^5"
+   }
 }
