--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
       "format": "prettier . --ignore-unknown --write"
    },
    "dependencies": {
+      "@hookform/resolvers": "^3.3.4",
       "@radix-ui/react-dropdown-menu": "^2.0.6",
       "@radix-ui/react-icons": "^1.3.0",
+      "@radix-ui/react-label": "^2.0.2",
       "@radix-ui/react-slot": "^1.0.2",
       "class-variance-authority": "^0.7.0",
       "clsx": "^2.1.0",
@@ -19,8 +21,11 @@
       "next-themes": "^0.2.1",
       "react": "^18",
       "react-dom": "^18",
+      "react-hook-form": "^7.50.1",
       "tailwind-merge": "^2.2.1",
-      "tailwindcss-animate": "^1.0.7"
+      "tailwindcss-animate": "^1.0.7",
+      "zod": "^3.22.4",
+      "zustand": "^4.5.1"
    },
    "devDependencies": {
       "@iconify-icon/react": "^2.0.1",
