--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
    "plugins": ["prettier-plugin-tailwindcss"],
+   "tailwindFunctions": ["clsx", "cn", "twMerge", "cva"],
    "printWidth": 100,
    "tabWidth": 3,
    "semi": false,
