--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
       "format": "prettier . --ignore-unknown --write"
    },
    "dependencies": {
+      "@ethersproject/providers": "^5.7.2",
       "@hookform/resolvers": "^3.3.4",
+      "@metamask/providers": "^14.0.2",
       "@radix-ui/react-dropdown-menu": "^2.0.6",
       "@radix-ui/react-icons": "^1.3.0",
       "@radix-ui/react-label": "^2.0.2",
@@ -22,9 +24,11 @@
       "react": "^18",
       "react-dom": "^18",
       "react-hook-form": "^7.50.1",
+      "react-hot-toast": "^2.4.1",
       "sharp": "^0.33.2",
       "tailwind-merge": "^2.2.1",
       "tailwindcss-animate": "^1.0.7",
+      "web3": "^4.5.0",
       "zod": "^3.22.4",
       "zustand": "^4.5.1"
    },
