--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
       "@radix-ui/react-icons": "^1.3.0",
       "@radix-ui/react-label": "^2.0.2",
       "@radix-ui/react-slot": "^1.0.2",
+      "@react-three/fiber": "^8.16.0",
+      "@studio-freight/hamo": "^0.6.28",
       "class-variance-authority": "^0.7.0",
       "clsx": "^2.1.0",
       "next": "14.1.4",
@@ -26,6 +28,7 @@
       "sharp": "^0.33.3",
       "tailwind-merge": "^2.2.2",
       "tailwindcss-animate": "^1.0.7",
+      "three": "^0.162.0",
       "web3": "^4.6.0",
       "zod": "^3.22.4",
       "zustand": "^4.5.2"
@@ -36,6 +39,7 @@
       "@types/node": "^20.11.30",
       "@types/react": "^18.2.70",
       "@types/react-dom": "^18.2.22",
+      "@types/three": "^0.162.0",
       "@typescript-eslint/eslint-plugin": "^7.3.1",
       "@typescript-eslint/parser": "^7.3.1",
       "autoprefixer": "^10.4.19",
@@ -48,6 +52,7 @@
       "postcss": "^8.4.38",
       "prettier": "^3.2.5",
       "prettier-plugin-tailwindcss": "^0.5.12",
+      "raw-loader": "^4.0.2",
       "tailwindcss": "^3.4.1",
       "typescript": "^5.4.3"
    }
